--- a/CourseProject/CourseProject/App.xaml
+++ b/CourseProject/CourseProject/App.xaml
@@ -11,8 +11,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <materialDesign:BundledTheme BaseTheme="Light" PrimaryColor="Green" SecondaryColor="Lime" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
-                <ResourceDictionary Source="Resources/Style.xaml"/>
-                <ResourceDictionary Source="Services/Language/DictionaryEng.xaml"/>
+                <ResourceDictionary x:Name="AppLang" Source="Services/Language/DictionaryEng.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             <DataTemplate DataType="{x:Type vm:AuthPageViewModel}">
                 <views:AuthPage/>
