A little bit change design,add server,add playlist

--- a/CourseProject/CourseProject/App.xaml
+++ b/CourseProject/CourseProject/App.xaml
@@ -43,6 +43,9 @@
             <DataTemplate DataType="{x:Type vm:SearchPageViewModel}">
                 <views:SearchPage/>
             </DataTemplate>
+            <DataTemplate DataType="{x:Type vm:AddPlaylistViewModel}">
+                <views:AddPlaylistPage/>
+            </DataTemplate>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
