--- a/CourseProject/CourseProject/Views/AlbumPage.xaml
+++ b/CourseProject/CourseProject/Views/AlbumPage.xaml
@@ -10,68 +10,55 @@
              d:DesignHeight="450" d:DesignWidth="800"
              d:DataContext="{d:DesignInstance Type=vm:AlbumPageViewModel}"
              Background="#FF1D1D1D">
-    <materialDesign:DialogHost 
-        IsOpen="{Binding dialog}">
-        <materialDesign:DialogHost.DialogContent>
-            <Border Height="Auto" Width="Auto">
-                <StackPanel Margin="16">
-                    <TextBlock Text="{Binding dialogText}"/>
-                    <Button Margin="0 10 0 0" Style="{StaticResource MaterialDesignFlatAccentButton}"
-                                Content="Закрыть" Foreground="#6E304B" Width="90" Height="30" Command="{Binding CloseDialogCommand}"/>
-                </StackPanel>
-            </Border>
-        </materialDesign:DialogHost.DialogContent>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="129*"/>
-                <ColumnDefinition Width="267*"/>
-                <ColumnDefinition Width="252*"/>
-                <ColumnDefinition Width="152*"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="57*"/>
-                <RowDefinition Height="323*"/>
-                <RowDefinition Height="70*"/>
-            </Grid.RowDefinitions>
-            <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding album.albums_name}" Foreground="AliceBlue" HorizontalAlignment="Center" VerticalAlignment="Center"  FontSize="24" TextAlignment="Center" Margin="111,15,10,10"/>
-            <TextBlock Grid.Row="0" Grid.Column="2" Text="{Binding Singer}" Foreground="AliceBlue" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center" Margin="10,15,10,10" Width="232"/>
-            <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Visible" PreviewMouseWheel="Scroll" Margin="10" Grid.ColumnSpan="4" Grid.RowSpan="2">
-                <ListBox ItemsSource="{Binding tracks}" SelectedItem="{Binding selectTrack}" Width="484" Height="Auto">
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <Grid Margin="20 20 20 0" Height="50">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="170"/>
-                                    <ColumnDefinition/>
-                                </Grid.ColumnDefinitions>
-                                <StackPanel Grid.Column="1" Margin="0,0,0,-18">
-                                    <TextBlock Text="{Binding track_name}" FontSize="17" Foreground="AliceBlue" Margin="5 5 0 0"/>
-                                </StackPanel>
-                            </Grid>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-                    <ListBox.ItemContainerStyle>
-                        <Style TargetType="ListBoxItem">
-                            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                            <Setter Property="Background" Value="Transparent" />
-                            <Setter Property="Template">
-                                <Setter.Value>
-                                    <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                                        <ContentPresenter />
-                                    </ControlTemplate>
-                                </Setter.Value>
-                            </Setter>
-                        </Style>
-                    </ListBox.ItemContainerStyle>
-                </ListBox>
-            </ScrollViewer>
-            <Button Content="Load" Height="Auto" Margin="30,142,30,145" Command="{Binding PlayTrackCommand}" Grid.Row="1"/>
-            <Button Height="Auto" Margin="46,134,46,145" Command="{Binding AddTrackToUserTracksCommand}" Grid.Column="3" Grid.Row="1">
-                <materialDesign:PackIcon Kind="Heart" Height="34" Width="24" />
-            </Button>
-            <Button Height="Auto" Margin="46,178,46,101" Command="{Binding DeleteTrackToUserTracksCommand}" Grid.Column="3" Grid.Row="1">
-                <materialDesign:PackIcon Kind="HeartOutline" Height="34" Width="24" />
-            </Button>
-        </Grid>
-    </materialDesign:DialogHost>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="129*"/>
+            <ColumnDefinition Width="267*"/>
+            <ColumnDefinition Width="252*"/>
+            <ColumnDefinition Width="152*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="57*"/>
+            <RowDefinition Height="323*"/>
+            <RowDefinition Height="70*"/>
+        </Grid.RowDefinitions>
+        <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding album.albums_name}" Foreground="AliceBlue" HorizontalAlignment="Center" VerticalAlignment="Center"  FontSize="24" TextAlignment="Center" Margin="111,15,10,10"/>
+        <TextBlock Grid.Row="0" Grid.Column="2" Text="{Binding Singer}" Foreground="AliceBlue" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center" TextAlignment="Center" Margin="10,15,10,10" Width="232"/>
+        <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Visible" PreviewMouseWheel="Scroll" Margin="10" Grid.ColumnSpan="4" Grid.RowSpan="2">
+            <ListBox ItemsSource="{Binding tracks}" SelectedItem="{Binding MainWindowViewModel.selectedTrack}" Width="484" Height="Auto">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Margin="20 20 20 0" Height="50">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="170"/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <StackPanel Grid.Column="1" Margin="0,0,0,-18">
+                                <TextBlock Text="{Binding track_name}" FontSize="17" Foreground="AliceBlue" Margin="5 5 0 0"/>
+                            </StackPanel>
+                        </Grid>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+                <ListBox.ItemContainerStyle>
+                    <Style TargetType="ListBoxItem">
+                        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                        <Setter Property="Background" Value="Transparent" />
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type ListBoxItem}">
+                                    <ContentPresenter />
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </ListBox.ItemContainerStyle>
+            </ListBox>
+        </ScrollViewer>
+        <Button Height="Auto" Margin="46,134,46,145" Command="{Binding AddTrackToUserTracksCommand}" Grid.Column="3" Grid.Row="1">
+            <materialDesign:PackIcon Kind="Heart" Height="34" Width="24" />
+        </Button>
+        <Button Height="Auto" Margin="46,178,46,101" Command="{Binding DeleteTrackToUserTracksCommand}" Grid.Column="3" Grid.Row="1">
+            <materialDesign:PackIcon Kind="HeartOutline" Height="34" Width="24" />
+        </Button>
+    </Grid>
 </UserControl>
