--- a/CourseProject/CourseProject/Views/MainPage.xaml
+++ b/CourseProject/CourseProject/Views/MainPage.xaml
@@ -12,6 +12,7 @@
       d:DataContext="{d:DesignInstance Type=vm:MainPageViewModel}">
     <UserControl.Resources>
         <convert:IDToSinger x:Key="IDToSinger"/>
+        <convert:TrackToSinger x:Key="TracktoSinger"/>
     </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -27,26 +28,24 @@
             <ColumnDefinition Width="127*"/>
             <ColumnDefinition Width="0*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Text="{DynamicResource MainPage}" Grid.ColumnSpan="2" Grid.Row="0" Foreground="White" FontFamily="Segoe UI Black" FontSize="36" Margin="75,10,57,0"></TextBlock>
-        <TextBlock Text="{DynamicResource AllAbums}" Grid.ColumnSpan="2" Grid.Row="1" Foreground="White" FontFamily="Segoe UI Black" FontSize="36" TextAlignment="Center"/>
-        <ScrollViewer HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Disabled" Grid.Row="2"  PreviewMouseWheel="Scroll" Margin="10,1,10,15" Grid.ColumnSpan="4">
-            <ListBox Width="{Binding WidthAlbums}" 
-         ItemsSource ="{Binding albumlist}" SelectedItem="{Binding selectedAlbum}" Height="177">
-                <ListBox.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <StackPanel Orientation="Horizontal"/>
-                    </ItemsPanelTemplate>
-                </ListBox.ItemsPanel>
+        <TextBlock Text="{DynamicResource AllAbums}" Grid.ColumnSpan="4" Foreground="White" FontFamily="Segoe UI Black" FontSize="36" TextAlignment="Center" Margin="10,0,10,59" Grid.RowSpan="2"/>
+        <ScrollViewer HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Disabled" Grid.Row="2"  PreviewMouseWheel="Scroll" Margin="10,1,10,52" Grid.ColumnSpan="4" Grid.RowSpan="2">
+            <ListBox Width="{Binding WidthAlbums}" ItemsSource ="{Binding albumlist}" SelectedItem="{Binding selectedAlbum}" Height="177">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel Margin="0 0 50 0">
-                            <Image Height="200" Width="200" Source="{Binding album_id, Converter={StaticResource IDToSinger}}"/>
-                            <TextBlock Foreground="AliceBlue" FontSize="20" Text="{Binding albums_name}" />
-                        </StackPanel>
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="6*"/>
+                                <RowDefinition Height="3*"/>
+                                <RowDefinition Height="2*"/>
+                            </Grid.RowDefinitions>
+                            <Image Source="{Binding album_id, Converter={StaticResource IDToSinger}}" Grid.Row="0"/>
+                            <TextBlock Text="{Binding albums_name}" FontSize="36" Foreground="AliceBlue" Grid.Row="1"/>
+                            <TextBlock Text="{Binding album_id,Converter={StaticResource TracktoSinger}}" Grid.Row="2" Foreground="LightGray"/>
+                        </Grid>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
             </ListBox>
         </ScrollViewer>
-        <Button Content="{DynamicResource ToAlbum}" Command="{Binding ToAlbumPageCommand}" Grid.Column="2" Margin="10,19,10,10" Height="Auto"/>
     </Grid>
 </UserControl>
